# codaze

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  about.hbs  about.toml  deny.toml
.cargo/: config.toml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  API.zh-CN.md  DESIGN.md  DESIGN.zh-CN.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  FAQ.md  FAQ.zh-CN.md  OPERATIONS.md  OPERATIONS.zh-CN.md  PACKAGING.md  PACKAGING.zh-CN.md  README.md  README.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md
packaging/launchd/: io.github.lain39.codaze.plist
packaging/systemd/: codaze.service
scripts/: bump-version.sh  check-no-local-codex-override.sh  check-release-metadata.sh  check-release-tools.sh  render-release-notes.sh  reset-local-codex.sh  use-local-codex.sh
src/: classifier.rs  config.rs  error_semantics.rs  failover.rs  gateway_errors.rs  http_shape.rs  main.rs  models.rs  request_normalization.rs  router.rs
src/accounts/: disk.rs  lifecycle.rs  mod.rs  selection.rs
src/accounts/tests/: disk.rs  lifecycle.rs  mod.rs  selection.rs
src/app/: admin.rs  api.rs  mod.rs
src/app/tests/: admin.rs  failover.rs  mod.rs  normalization.rs  responses.rs  routes.rs  websocket.rs
src/responses/: failure.rs  mod.rs  pre_stream.rs  stream.rs
src/responses/websocket/: errors.rs  mod.rs  protocol.rs
src/upstream/: client.rs  fingerprint.rs  headers.rs  http.rs  mod.rs  refresh.rs  tests.rs  websocket.rs
